--- a/pb.css
+++ b/pb.css
@@ -107,6 +107,10 @@ tr {
    order: 2;
 }
 
+.divTabsContainer .divTabs li, .nav-tabs {
+   border-bottom: unset;
+}
+
 @media screen and (max-width: 900px) {
    .ribbon a {
       padding: 5px;
